                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-01-2006 changed: music and video context menus for better consistency
 - 05-01-2006 changed: speed improvement getting songs from the musicdatabase
 - 04-01-2006 changed: enabled experimental FF/RW in dvdplayer. it's abit shaky still
 - 04-01-2006 changed: iso9660:// protocol always tried to read a disc as a mode2 disc, even thou it was a mode1 disc.
 - 04-01-2006 fixed: creation of playlist locations (playlists/music and playlists/video)
 - 03-01-2006 fixed: music nav, Playitem does not work on "* All ..." folders
 - 03-01-2006 changed: music playlists, playlists with music database items are now saved with the real path of the file
                       instead of the musicdatabase URL
 - 03-01-2006 fixed: Sort order in My Pictures
 - 02-01-2006 changed: moved list/thumb label formating to media window base class
 - 02-01-2006 changed: moved item caching out of music nav and files into the FileItemList
 - 02-01-2006 fixed: Rumble controller option caused crashes with analog buttons.
 - 01-01-2006 fixed: mplayer.dll - some files with mp3 audio was misdetected and played only static.
 - 01-01-2006 fixed: duplicate string id resulting in "Target Temperature" incorrectly displayed in System Info
 - 30-12-2005 added: http api "getshares" and "getmedialocation" now accept "files" as a share type
 - 30-12-2005 fixed: Port numbers in Karaoke settings didn't match port numbers in System Info.
 - 30-12-2005 changed: Skin slide start positions are relative as of skin version 1.86.  PM3 updated to 1.86
 - 30-12-2005 added: Conditional window origins for dialogs.
 - 30-12-2005 fixed: [1387719] Stacking of non-english names.